@@ -61,7 +61,7 @@
 		<label for="pass">###PASSWORD_LABEL###</label>
 		<input type="password" id="pass" name="pass" value="" />
 	</div>
-	
+
 	<!--###PERMALOGIN_VALID###-->
 		<div>
 			<label for="permalogin">###PERMALOGIN###</label>
@@ -69,8 +69,8 @@
 			<input name="permalogin" value="1" type="checkbox" ###PERMALOGIN_CHECKBOX_ATTRIBUTES### id="permalogin"  onclick="document.getElementById('permaloginHiddenField').disabled = this.checked;" />
 		</div>
 	<!--###PERMALOGIN_VALID###-->
-	
-	<div>	
+
+	<div>
 		<input type="submit" name="submit" value="###LOGIN_LABEL###" />
 	</div>
 
@@ -117,8 +117,8 @@
 	<div>
 		<input type="submit" name="submit" value="###LOGOUT_LABEL###" />
 	 </div>
-	
-	<div class="felogin-hidden"> 
+
+	<div class="felogin-hidden">
 		<input type="hidden" name="logintype" value="logout" />
 		<input type="hidden" name="pid" value="###STORAGE_PID###" />
 	</div>
@@ -160,8 +160,5 @@
 <!--###TEMPLATE_FORGOT###-->
 
 
-
-
-
-
-
+</body>
+</html>
